[gd_scene load_steps=5 format=2]

[ext_resource path="res://2-Scripts/enemy.gd" type="Script" id=1]
[ext_resource path="res://3-Tiles/enemigo.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[sub_resource type="CircleShape2D" id=2]
radius = 80.0

[node name="Enemy" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionArea" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape" type="CollisionShape2D" parent="CollisionArea"]
shape = SubResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]

[node name="DetectionShape" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 2 )

[node name="RayCenter" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 0 )

[node name="RayRight" type="RayCast2D" parent="."]
position = Vector2( 1, 0 )
cast_to = Vector2( 0, 0 )

[node name="RayLeft" type="RayCast2D" parent="."]
position = Vector2( -1, 0 )
cast_to = Vector2( 0, 0 )

[connection signal="area_entered" from="DetectionArea" to="." method="_on_DetectionArea_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_DetectionArea_exited"]
